--- a/src/components/Layouts.css
+++ b/src/components/Layouts.css
@@ -12,21 +12,26 @@
   }
   
   .logo {
-    height: 50px;
-    background: rgba(255,255,255,.2);
-    margin: 0;
-  }
-
-  .logo h1 {
-      float: left;
-      padding: 10px;
-      color: white;
-      font-size: 18px;
+    cursor: pointer;
+    height: 64px;
+    position: relative;
+    line-height: 64px;
+    transition: all 0.3s;
+    overflow: hidden;
   }
 
   .logo img {
-      height: 10%;
-      width: 10%;
+    display: inline-block;
+    vertical-align: middle;
+    height: 32px;
+  }
+  .logo h1 {
+    color: #fff;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 16px;
+    margin: 0 0 0 12px;
+    font-weight: 400;
   }
 
   #item {
