--- a/src/components/Layouts.css
+++ b/src/components/Layouts.css
@@ -18,20 +18,22 @@
     line-height: 64px;
     transition: all 0.3s;
     overflow: hidden;
+    margin: 20 auto;
   }
 
   .logo img {
     display: inline-block;
     vertical-align: middle;
     height: 32px;
+    margin: 0 0 0 22px;
   }
   .logo h1 {
     color: #fff;
     display: inline-block;
     vertical-align: middle;
-    font-size: 16px;
+    font-size: 20px;
     margin: 0 0 0 12px;
-    font-weight: 400;
+    font-weight: 600;
   }
 
   #item {
